<resources>
    <string name="app_name">Exam online</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_do_exam">Take Exam</string>
    <string name="lbl_code">code</string>
    <string name="lbl_slide_bar_1">Slide Bar 1</string>
    <string name="lbl_slide_bar_2">Slide Bar 2</string>
    <string name="lbl_time_open">Time open</string>
    <string name="lbl_math_exam">Math Exam</string>
    <string name="lbl_tran_quang_huy">Trần Quang Huy</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_1_hour_11_min">1 hour 11 min</string>
    <string name="lbl_resend">Resend</string>
    <string name="msg_total_duration">Total duration of the exam</string>
    <string name="msg_total_duration1">Total duration of your exam</string>
    <string name="msg_teacher_gmail_c">huyheopro@gmail.com</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_home">Home</string>
    <string name="msg_if_you_don_t_re">If you don’t receive the code in 60 seconds
    tap bellow to resend it</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_0938605304">0938605304</string>
    <string name="msg_teacher_name">&gt; Teacher: Name
    &gt; Number: 10</string>
    <string name="teacher">&gt; Teacher: </string>
    <string name="NameTeacher">Name</string>
    <string name="Number">&gt; Number: </string>
    <string name="NumStudent">10</string>
    <string name="msg_student10_gmail">student10@gmail.com</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_edit_password">Edit password</string>
    <string name="lbl_log_out">Log out</string>
    <string name="msg_student3_gmail">student3@gmail.com</string>
    <string name="lbl_result_of_exam">Result of exam</string>
    <string name="lbl_edit_gender">Edit gender</string>
    <string name="msg_10_point_for_a">point for a correct answer</string>
    <string name="msg_student_gmail_c">huyheopro@gmail.com</string>
    <string name="lbl_math_for_child">Math for child</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_detail_screen">Detail Screen</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_re_enter_new_pa">Confirm Password</string>
    <string name="msg_exam_taking_his">Exam-taking history</string>
    <string name="lbl_do_exam_screen">Do Exam Screen</string>
    <string name="lbl_forgot_pasword">Forgot Pasword</string>
    <string name="lbl_detail_exam">Detail Exam</string>
    <string name="lbl_a">A</string>
    <string name="lbl_detail_class">Detail Class</string>
    <string name="msg_new_password_mu">New password must be 8-12 characters, must include letters and numbers</string>
    <string name="lbl_b">B</string>
    <string name="lbl_c">C</string>
    <string name="msg_current_passwor">Current Password</string>
    <string name="lbl_d">D</string>
    <string name="lbl_e">E</string>
    <string name="msg_student6_gmail">student6@gmail.com</string>
    <string name="msg_tap_on_options">Tap on options to select the correct answer</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_upcoming_exam">Upcoming Exam</string>
    <string name="lbl_edit_phone">Edit phone</string>
    <string name="lbl_1_hour_15_min">1 hour 15 min</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_class_code">Class code</string>
    <string name="msg_student9_gmail">student9@gmail.com</string>
    <string name="msg_new_here_regis">New Here? Register</string>
    <string name="lbl_profile_screen">Profile Screen</string>
    <string name="lbl_classes_screen">Classes Screen</string>
    <string name="lbl_otp">OTP</string>
    <string name="msg_student2_gmail">student2@gmail.com</string>
    <string name="msg_mark_of_the_exa">Mark of the exam</string>
    <string name="msg_check_your_app">Check your app\'s UI from the below demo screens of your app.</string>
    <string name="msg_student8_gmail">student8@gmail.com</string>
    <string name="lbl_password">Password</string>
    <string name="msg_verification_phone">Verification code will be sent to this phone number to verify the phone number is yours</string>
    <string name="msg_verification_email">Verification code will be sent to this email address to verify the email address is yours</string>
    <string name="msg_verification_email1">Verification link will be sent to this email address to verify the email address is yours</string>
    <string name="lbl_verify_otp">Verify OTP</string>
    <string name="lbl_classes">Classes</string>
    <string name="lbl_time_close">Time close</string>
    <string name="msg_student1_gmail">student1@gmail.com</string>
    <string name="lbl_22_11_2000">22/11/2000</string>
    <string name="lbl_home_screen">Home Screen</string>
    <string name="msg_16_30_23_11_2">16 : 30 23/11/2021</string>
    <string name="msg_10_point_awarde">point awarded for a correct answer and no
    marks for a incorrect answer</string>
    <string name="lbl_exams">Exams</string>
    <string name="lbl_student_8">Student 8</string>
    <string name="msg_already_member">Already Member? Login</string>
    <string name="lbl_student_7">Student 7</string>
    <string name="lbl_student_6">Student 6</string>
    <string name="lbl_student_5">Student 5</string>
    <string name="lbl_time_did_exam">Time did exam</string>
    <string name="msg_please_enter_th">Please enter the 4-digit code sent to you
    at huyheopro@gmail.com</string>
    <string name="lbl_student_9">Student 9</string>
    <string name="lbl_10_points">10 points</string>
    <string name="lbl_student_4">Student 4</string>
    <string name="lbl_student_3">Student 3</string>
    <string name="lbl_student_2">Student 2</string>
    <string name="msg_student4_gmail">student4@gmail.com</string>
    <string name="lbl_student_1">Student 1</string>
    <string name="msg_hello_teacher">Hello, huyheopro@gmail.com</string>
    <string name="msg_student7_gmail">student7@gmail.com</string>
    <string name="lbl_exam_history">Exam History</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_edit_email">Edit email</string>
    <string name="msg_please_enter_th2">Please enter the 4-digit code sent to you
    at 0938605304</string>
    <string name="lbl_edit_name">Edit name</string>
    <string name="lbl_time_begin">Time begin</string>
    <string name="lbl_time_start">Time start</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_10">10</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_please_read_the">Please read the text below carefully so you can
    understand it</string>
    <string name="lbl_start_page">Start Page</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_start_exam">Start Exam</string>
    <string name="lbl_save">Save</string>
    <string name="msg_16_45_23_11_2">16 : 45 23/11/2021</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_time_finish">Time finish</string>
    <string name="lbl_history_screen">History Screen</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_submit_quiz">Submit Quiz</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_join">Join</string>
    <string name="lbl_4">4</string>
    <string name="msg_full_name_with">Full name with 2 or more words</string>
    <string name="lbl_online_exam">Online
    Exam</string>
    <string name="lbl_5">5</string>
    <string name="lbl_student_10">Student 10</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="lbl_8">8</string>
    <string name="lbl_9">9</string>
    <string name="lbl_login">Login</string>
    <string name="msg_class_does_not">Class does not exist!</string>
    <string name="msg_brief_explanati">Brief explanation about this exam</string>
    <string name="msg_14_45_23_11_2">14 : 45 23/11/2021</string>
    <string name="lbl_10_question">10 Question</string>
    <string name="lbl_join_class2">Join class</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_1_1">1 + 1 = ?</string>
    <string name="lbl_join_class">Join Class</string>
    <string name="msg_click_submit_if">Click submit if you are sure you want to
    complete all the question</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_16_35">16:35</string>
    <string name="msg_student5_gmail">student5@gmail.com</string>
    <string name="lbl_edit_birth">Edit birth</string>
    <string name="lbl_exam_screen">Exam Screen</string>
    <string name="msg_detail_history">Detail history Screen</string>
    <string name="lbl_otp_1">OTP 1</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="code">Code</string>
    <string name="lbl_10_student">10 Student</string>
    <string name="lbl_teacher_name">Teacher’ name</string>
    <string name="math">Math</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="questiondatapage">QuestionDataPage</string>
    <string name="answer_data_page">AnswerDataPage</string>
    <string name="lbl_login_error">Login Error</string>
    <string name="lbl_error">Error</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="lbl_register_error">Register Error</string>
    <string name="lbl_verify_email">Verify Email</string>
    <string name="lbl_user_name">User Name</string>
    <string name="mgm_pls_verify_email">Your account is unauthenticated. Please click on the verification link sent to your email.</string>
    <string name="lbl_unverified_email">Unauthenticated Account</string>
    <string name="msg_23_11_2">23/11/2021</string>
    <string name="msg_14_45">14:45</string>
    <string name="mgm_you_are_not_student">You are not student!</string>
    <string name="numPage">-/-</string>
    <string name="msg_check_answer">You must answer all the questions in order to submit the test</string>
    <string name="lbl_unanswered">Unanswered Question</string>
    <string name="lbl_exit">Leave</string>
    <string name="msg_exit">Are you sure you want to leave the exam room?</string>
    <string name="msg_submit">Are you sure you want to submit the test?</string>
    <string name="lbl_done">Done!</string>
    <string name="lbl_timeover">Time Over</string>
    <string name="msg_timeover">Thank you for taking the test!</string>
    <string name="lbl_expired">Expired!</string>
    <string name="level">Level</string>
    <string name="type">Type</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="msg_notime">It\'s not time for the exam yet!</string>
    <string name="lbl_notime">Not time yet</string>
    <string name="msg_new_password">New password will be sent to your email</string>
    <string name="lbl_reset_error">Reset Error</string>
</resources>