<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.examonline.app.modules.homescreen.ui.HomeScreenFragment"
        android:label="@string/lbl_home_screen"
        tools:layout="@layout/activity_home_screen" >
    </fragment>

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.examonline.app.modules.classesscreen.ui.ClassesScreenFragment"
        android:label="@string/lbl_classes_screen"
        tools:layout="@layout/activity_classes_screen" />

    <fragment
        android:id="@+id/nav_take_exam"
        android:name="com.examonline.app.modules.doexamscreen.ui.DoExamScreenFragment"
        android:label="@string/lbl_do_exam_screen"
        tools:layout="@layout/activity_do_exam_screen" />
    <fragment
        android:id="@+id/nav_history_exam"
        android:name="com.examonline.app.modules.historyscreen.ui.HistoryScreenFragment"
        android:label="@string/lbl_history_screen"
        tools:layout="@layout/activity_history_screen" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.examonline.app.modules.profilescreen.ui.ProfileScreenFragment"
        android:label="@string/lbl_profile_screen"
        tools:layout="@layout/activity_profile_screen" />
</navigation>