<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="14dp">

        <TextView
            android:id="@+id/QuestionTitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/question"
            android:textColor="@color/indigo_A700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"
            android:text="@string/level"
            android:textColor="@color/indigo_A700"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/QuestionTitlePage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AnswerTitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/indigo_A700"
            android:layout_marginTop="24dp"
            android:text="@string/answer"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionDataPage" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/indigo_A700"
            android:layout_marginTop="25dp"
            android:text="@string/type"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/AnswerTitlePage"
            app:layout_constraintTop_toBottomOf="@+id/questionDataPage" />

        <TextView
            android:id="@+id/questionDataPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/indigo_A700"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/questiondatapage"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/QuestionTitlePage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AnswerTitlePage"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints">
            <EditText
                android:id="@+id/etAnswer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="start"
                android:singleLine="true"
                android:padding ="10dp"
                android:textColor="@color/blue_600"
                android:background="@drawable/rectangle_bg_blue_600_00_border_blue_600_00_radius_10"
                android:inputType="textMultiLine"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <include
            android:id="@+id/mcq"
            layout="@layout/mcq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AnswerTitlePage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
