<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="editGenderVM" type="com.examonline.app.modules.editgender.data.viewmodel.EditGenderVM"/>
    </data>

    <FrameLayout android:id="@+id/frame"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyle">
        <LinearLayout android:id="@+id/linear"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linear1"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/image"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxv"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_43"/>

                    <TextView
                        android:id="@+id/txtEditGender1"
                        style="@style/txtUbuntumedium18"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_183pxh"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_weight="0.5"
                        android:gravity="top|start"
                        android:text="@string/lbl_edit_gender" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image2"
                    imageRes="@{@drawable/img_group_1795}"
                    android:layout_width="@dimen/_600pxh"
                    android:layout_height="@dimen/_800pxh"
                    android:layout_gravity="center_horizontal"
                    tools:src="@drawable/img_group_1795" />
                <LinearLayout android:id="@+id/linear3"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_39pxv"
                    android:layout_marginLeft="@dimen/_8pxh"
                    android:layout_marginRight="@dimen/_8pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:gravity="top|start"
                        android:id="@+id/txtEditGender"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="@dimen/_2pxh"
                        style="@style/txt_4" android:text="@string/lbl_gender"/>
                    <LinearLayout android:id="@+id/linear4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        >


                        <RadioGroup
                            android:id="@+id/Gender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_27pxh"
                            >
                            <RadioButton
                                android:id="@+id/Male"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blue_600"
                                android:text="@string/male" />
                            <RadioButton
                                android:id="@+id/Female"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blue_600"
                                android:text="@string/female" />
<!--                            <RadioButton-->
<!--                                android:id="@+id/Other"-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:textColor="@color/blue_600"-->
<!--                                android:text="@string/other" />-->
                        </RadioGroup>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:gravity="center"
                        android:id="@+id/btnSave"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_89pxh"
                        android:layout_marginStart="@dimen/_89pxh"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent"
                        android:text="@string/lbl_save"
                        android:textAllCaps="false"
                        style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_save"/>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</layout>
