<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="detailScreen3RowModel" type="com.examonline.app.modules.detailscreen2.data.model.DetailScreen3RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
<!--        <ImageView android:id="@+id/image"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="@dimen/_360pxh"-->
<!--            android:scaleType="fitXY" android:src="@drawable/img_divider_1"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/StudentAva"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher_round"
                />
            <LinearLayout android:id="@+id/linear1"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <TextView android:gravity="top|start"
                    android:id="@+id/txtStudentName"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:text="@{detailScreen3RowModel.txtStudentName}"
                    style="@style/txt_6" tools:text="@string/lbl_student_1"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtStudentGmail"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="wrap_content"
                    android:text="@{detailScreen3RowModel.txtStudentGmail}"
                    style="@style/txt_7" tools:text="@string/msg_student1_gmail"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtStudentPhone"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="wrap_content"
                    android:text="@{detailScreen3RowModel.txtStudentPhone}"
                    style="@style/txt_8" tools:text="@string/lbl_0938605304"/>
            </LinearLayout>

        </LinearLayout>
        <ImageView android:id="@+id/image1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/_360pxh"
            android:scaleType="fitXY" android:src="@drawable/img_divider_2"/>
    </LinearLayout>
</layout>
